--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,33 +1,76 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  background: #dfe9f5;
+}
+
 ::before * ** ::after {
-    box-sizing: border-box;
-  }
-body{
-    width: 100%;
-    height: 100%;
-    background-image: url("/img/kimberly-farmer-lUaaKCUANVI-unsplash.jpg");
-    background-size: cover;
+  box-sizing: border-box;
 }
-form,input{
-    display: flex;
+.login{
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 3px solid rgb(0, 0, 0);
+  border-radius: 20px;
+  margin-top: 20px;
 }
-header{
-    display: flex;
-    justify-content: center;
-    place-content: center;
-}
-.staff{
-    display: flex;
+form {
+  display: flex;
+  height: 50vh;
+  width: 500px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 3px solid rgb(0, 0, 0);
+  border-radius: 20px;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
 }
-h3{
-    align-items: center;
-    text-align: center;
-    
+form input{
+    width: 300px;
+    margin-top: 10px;
+    border: 3px solid rgb(0, 0, 0);
+  border-radius: 3px;
+}
+button{
+  background:orangered;
+  color: #fff;
+  padding: 7px 15px;
+  border-radius: 10px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+.regStudents{
+  display: flex;
+  height: 120vh;
+  width: 500px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid rgb(0, 0, 0);
+  border-radius: 20px;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+}
+h3 {
+  align-items: center;
+  text-align: center;
+}
+
+
+table,
+th,
+td {
+  width: 900px;
+  height: auto;
+  border: 5px solid white;
+  color: aliceblue;
 }
