--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -124,6 +124,7 @@ a:hover{
 }
 /** Display Data */
 .course-box{
+    /* display: none; */
     width: auto;
     padding: 5px;
     margin-top: 10px;
