--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -10,6 +10,7 @@
 }
 body{
     background: #dfe9f5;
+    
 }
 .container{
     display: flex;
@@ -178,4 +179,17 @@ table, th, td{
     display: flex;
     flex-direction: column;
     position: relative;
+ }
+ .Update{
+    display: grid;
+  grid-template-columns: auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+ }
+ .update-grid{
+    background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
  }
