Added Table to display Classe with all the Student

--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -66,11 +66,11 @@ h3 {
 }
 
 
-table,
+/* table,
 th,
 td {
   width: 900px;
   height: auto;
   border: 5px solid white;
   color: aliceblue;
-}
+} */
