--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -133,13 +133,15 @@ a:hover{
     border-radius: 10px;
     box-shadow: 0 20px 35px rgba(0,0,0, 0.1);
 }
-table, th, td{
+table{
+    border-collapse: collapse;
     position: relative;
-    width: 800px;
-    height: auto;
-    border: 5px solid rgb(7, 7, 7);
-    color:rgb(4, 4, 4);
+    width: 800px;  
   }
+  td,
+  th {height: auto;
+    border: 5px solid rgb(7, 7, 7);
+    color:rgb(4, 4, 4);}
   /**
   Student Profile  */
   .profile{
